knocking now visibly integrated, bugfixes

--- a/css/game.css
+++ b/css/game.css
@@ -64,6 +64,27 @@
 	-webkit-transition-property: top, left, right, bottom;
 	-webkit-transition-duration: .5s;
 }
+#game .players .knocked {
+	width: 84px;
+	height: 103px;
+	z-index: 11;
+	display: none;
+	-webkit-transition-property: top, left, right, bottom;
+	-webkit-transition-duration: .4s;
+	-webkit-transition-timing-function: ease-out;
+}
+#game .players .knocked div {
+	background: url(/gfx/game/knocked.png) no-repeat;
+	top: 0px;
+	width: 100%;
+	height: 73px;
+	-webkit-transition-property: top;
+	-webkit-transition-duration: .1s;
+	-webkit-transition-timing-function: ease-in;
+}
+#game .players .knocked .down {
+	top: 30px;
+}
 
 /** horizontal **/
 #game .players .horizontal {
@@ -86,6 +107,14 @@
 	left: 370px;
 	bottom: 7px;
 	height: 100%;
+}
+#game .players .bottom .knocked {
+	bottom: 160px;
+	left: 500px;
+}
+#game .players .bottom .knocked.down {
+	bottom: 10px;
+	left: 280px;
 }
 #game .players .bottom .area {
 	bottom: 100px;
@@ -181,6 +210,14 @@
 	top: 4px;
 	left: 368px;
 }
+#game .players .top .knocked {
+	top: 160px;
+	left: 290px;
+}
+#game .players .top .knocked.down {
+	top: -10px;
+	left: 280px;
+}
 #game .players .top .area {
 	left: 252px;
 	background-position: -297px 0px;
@@ -214,6 +251,12 @@
 #game .players .vertical {
 
 }
+#game .players .vertical .knocked {
+	top: 260px;
+}
+#game .players .vertical .knocked.down {
+	top: 180px;
+}
 #game .players .vertical .area {
 	width: 148px;
 	height: 285px;
@@ -240,6 +283,12 @@
 #game .players .left {
 	left: 0px;
 }
+#game .players .left .knocked {
+	left: 150px;
+}
+#game .players .left .knocked.down {
+	left: 10px;
+}
 #game .players .left .cards {
 	left: 5px;
 }
@@ -263,6 +312,12 @@
 /** right **/
 #game .players .right {
 	right: 0px;
+}
+#game .players .right .knocked {
+	right: 150px;
+}
+#game .players .right .knocked.down {
+	right: 20px;
 }
 #game .players .right .cards {
 	right: 6px;
